--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
     "gulp-babel": "^7.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss": "^7.0.1",
+    "postcss-loader": "^2.1.6",
+    "postcss-preset-env": "^5.3.0",
+    "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
